AI Refactor for techsur-rfp-ai-service-development/src/main/java/solutions/techsur/rfpaiservice/controller/ComplianceMatrixController.java:
Changes:
- Corrected the path variable name inconsistency in the getComplianceMatrix method (`matrixId` was correctly used).
- Added missing `@RequestParam` annotation on CommonFilter HTTP parameter in `getComplianceMatrixPage` method for clarity and proper binding.
- Annotated `CommonFilter` parameter with `@ParameterObject` to ensure proper Swagger documentation and Spring binding.
- Added `@Validated` annotation at the class level for consistent validation support.
- Improved JavaDoc-like `@Operation` description to clarify the data returned for the create method.
- Reformatted code for better readability, specifically for the `getComplianceMatrixPage` method parameters.
- Added generics to `.toList` stream terminal operation for compatibility with Java versions before 16, replaced it with `.collect(Collectors.toList)`.
- Ensured consistent use of request body validation for update and create methods.
- Cleaned imports by ordering them in a standard way.
- Improved method parameter annotations for documentation and validation clarity.